--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.elytraforce</groupId>
     <artifactId>aUtils</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.5-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -37,8 +37,8 @@
                             <shadedPattern>${project.groupId}.libs.hikari</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>org.slf4j</pattern>
-                            <shadedPattern>${project.groupId}.libs.slf4j</shadedPattern>
+                            <pattern>org.mybatis</pattern>
+                            <shadedPattern>${project.groupId}.libs.ibatis</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -90,6 +90,23 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>3.4.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.4</version>
         </dependency>
     </dependencies>
 </project>
