--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,10 @@
             <artifactId>guice</artifactId>
             <version>5.0.0-BETA-1</version>
         </dependency>
+        <dependency>
+            <groupId>me.xdrop</groupId>
+            <artifactId>fuzzywuzzy</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 </project>
