--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>5.0.0-BETA-1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
